Added a fast-made navbar

--- a/index.html
+++ b/index.html
@@ -18,10 +18,36 @@
 
 <body>
 
-    <div class="container">
-        <h1>My First Bootstrap Page</h1>
-        <p>This is some text.</p>
-    </div>
+    <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
+        <!-- Brand -->
+        <a class="navbar-brand" href="#">Navbar</a>
+
+        <!-- Toggler/collapsive Button -->
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="collapsibleNavbar">
+            <ul class="navbar-nav nav-pills">
+                <li class="nav-item">
+                    <a class="nav-link active" href="#">Main</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Basketball</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Football</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Indoor Football</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Press Room</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+
 
 </body>
 
