Added separated css

--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.6/umd/popper.min.js"></script>
     <!-- Latest compiled JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js"></script>
-
+    <style src="css/main.css"></style>
+    <link rel="stylesheet" href="css/main.css">
+    
 </head>
 
 <body>
@@ -30,7 +32,7 @@
         <div class="collapse navbar-collapse" id="collapsibleNavbar">
             <ul class="navbar-nav nav">
                 <li class="nav-item">
-                    <a class="nav-link active" data-toggle="tab" href="#home">Home</a>
+                    <a class="nav-link active" data-toggle="tab" onclick="" href="#home">Home</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" data-toggle="tab" href="#basket">Basketball</a>
@@ -103,15 +105,6 @@
             </h1>
         </div>
     </div>
-    <style>
-        .tab-content {
-            margin-top: 56px;
-            
-        }
-        .tab-pane {
-            padding: 0;
-        }
-    </style>
 
 </body>
 
