Added basketball cards

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js"></script>
     <script src="js/script.js"></script>
     <link rel="stylesheet" href="css/main.css">
-    
+
 </head>
 
 <body>
@@ -41,7 +41,7 @@
                     <a class="nav-link" data-toggle="collapse" data-target=".navbar-collapse" onclick="toggleView(event)" href="#football">Football</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" data-toggle="collapse" data-target=".navbar-collapse" onclick="toggleView(event)"href="#indoor">Indoor Football</a>
+                    <a class="nav-link" data-toggle="collapse" data-target=".navbar-collapse" onclick="toggleView(event)" href="#indoor">Indoor Football</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" data-toggle="collapse" data-target=".navbar-collapse" onclick="toggleView(event)" href="#press">Press Room</a>
@@ -84,10 +84,76 @@
 
             </div>
         </div>
-        <div class="tab-pane container col-sm-12" id="basket">
-            <h1>
-                Tu 
-            </h1>
+        <div class="tab-pane container-fluid p-2" id="basket">
+            <h3>Roster</h3>
+            <div class="row">
+                <div class="card col mx-2">
+                    <img class="card-img-top" src="images/img_avatar1.png" alt="Card image">
+                    <div class="card-body">
+                        <h4 class="card-title">John Doe</h4>
+                        <p class="card-text">Some example text.</p>
+                        <a href="#" class="btn btn-primary">See Profile</a>
+                    </div>
+                </div>
+                <div class="card col mx-2">
+                    <img class="card-img-top" src="images/img_avatar1.png" alt="Card image">
+                    <div class="card-body">
+                        <h4 class="card-title">John Doe</h4>
+                        <p class="card-text">Some example text.</p>
+                        <a href="#" class="btn btn-primary">See Profile</a>
+                    </div>
+                </div>
+                <div class="card col mx-2">
+                    <img class="card-img-top" src="images/img_avatar1.png" alt="Card image">
+                    <div class="card-body">
+                        <h4 class="card-title">John Doe</h4>
+                        <p class="card-text">Some example text.</p>
+                        <a href="#" class="btn btn-primary">See Profile</a>
+                    </div>
+                </div>
+                <div class="card col mx-2">
+                    <img class="card-img-top" src="images/img_avatar1.png" alt="Card image">
+                    <div class="card-body">
+                        <h4 class="card-title">John Doe</h4>
+                        <p class="card-text">Some example text.</p>
+                        <a href="#" class="btn btn-primary">See Profile</a>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="card col-sm-3">
+                    <img class="card-img-top" src="images/img_avatar1.png" alt="Card image">
+                    <div class="card-body">
+                        <h4 class="card-title">John Doe</h4>
+                        <p class="card-text">Some example text.</p>
+                        <a href="#" class="btn btn-primary">See Profile</a>
+                    </div>
+                </div>
+                <div class="card col-sm-3">
+                    <img class="card-img-top" src="images/img_avatar1.png" alt="Card image">
+                    <div class="card-body">
+                        <h4 class="card-title">John Doe</h4>
+                        <p class="card-text">Some example text.</p>
+                        <a href="#" class="btn btn-primary">See Profile</a>
+                    </div>
+                </div>
+                <div class="card col-sm-3">
+                    <img class="card-img-top" src="images/img_avatar1.png" alt="Card image">
+                    <div class="card-body">
+                        <h4 class="card-title">John Doe</h4>
+                        <p class="card-text">Some example text.</p>
+                        <a href="#" class="btn btn-primary">See Profile</a>
+                    </div>
+                </div>
+                <div class="card col-sm-3">
+                    <img class="card-img-top" src="images/img_avatar1.png" alt="Card image">
+                    <div class="card-body">
+                        <h4 class="card-title">John Doe</h4>
+                        <p class="card-text">Some example text.</p>
+                        <a href="#" class="btn btn-primary">See Profile</a>
+                    </div>
+                </div>
+            </div>
         </div>
         <div class="tab-pane container col-sm-12" id="football">
             <h1>
