Fixed grid issue

--- a/index.html
+++ b/index.html
@@ -84,9 +84,9 @@
 
             </div>
         </div>
-        <div class="tab-pane container-fluid p-2" id="basket">
+        <div class="tab-pane container" id="basket">
             <h3>Roster</h3>
-            <div class="row">
+            <div class="row p-2">
                 <div class="card col mx-2">
                     <img class="card-img-top" src="images/img_avatar1.png" alt="Card image">
                     <div class="card-body">
@@ -120,8 +120,8 @@
                     </div>
                 </div>
             </div>
-            <div class="row">
-                <div class="card col-sm-3">
+            <div class="row p-2">
+                <div class="card col mx-2">
                     <img class="card-img-top" src="images/img_avatar1.png" alt="Card image">
                     <div class="card-body">
                         <h4 class="card-title">John Doe</h4>
@@ -129,7 +129,7 @@
                         <a href="#" class="btn btn-primary">See Profile</a>
                     </div>
                 </div>
-                <div class="card col-sm-3">
+                <div class="card col mx-2">
                     <img class="card-img-top" src="images/img_avatar1.png" alt="Card image">
                     <div class="card-body">
                         <h4 class="card-title">John Doe</h4>
@@ -137,7 +137,7 @@
                         <a href="#" class="btn btn-primary">See Profile</a>
                     </div>
                 </div>
-                <div class="card col-sm-3">
+                <div class="card col mx-2">
                     <img class="card-img-top" src="images/img_avatar1.png" alt="Card image">
                     <div class="card-body">
                         <h4 class="card-title">John Doe</h4>
@@ -145,7 +145,7 @@
                         <a href="#" class="btn btn-primary">See Profile</a>
                     </div>
                 </div>
-                <div class="card col-sm-3">
+                <div class="card col mx-2">
                     <img class="card-img-top" src="images/img_avatar1.png" alt="Card image">
                     <div class="card-body">
                         <h4 class="card-title">John Doe</h4>
