Minor changes in cards

--- a/index.html
+++ b/index.html
@@ -87,70 +87,72 @@
         <div class="tab-pane container" id="basket">
             <h3>Roster</h3>
             <div class="row p-2">
-                <div class="card col mx-2">
+                <div class="card col-sm-4 col-sm-offset-1">
                     <img class="card-img-top" src="images/img_avatar1.png" alt="Card image">
                     <div class="card-body">
-                        <h4 class="card-title">John Doe</h4>
-                        <p class="card-text">Some example text.</p>
-                        <a href="#" class="btn btn-primary">See Profile</a>
+                        <h5 class="card-title text-uppercase">John Doe</h5>
+                        <h6 class="card-subtitle mb-2 text-muted font-weight-light">Guard</h6>
+                        <h4 class="font-weight-bold">13</h4>
+                        <div class="col-sm-1 offset-9">
+                            <a href="#" class="btn btn-outline-primary">+</a>
+                        </div>
                     </div>
                 </div>
-                <div class="card col mx-2">
+                <div class="card col-sm-4 col-sm-offset-1">
                     <img class="card-img-top" src="images/img_avatar1.png" alt="Card image">
                     <div class="card-body">
-                        <h4 class="card-title">John Doe</h4>
-                        <p class="card-text">Some example text.</p>
-                        <a href="#" class="btn btn-primary">See Profile</a>
+                        <h5 class="card-title text-uppercase">John Doe</h5>
+                        <h6 class="card-subtitle mb-2 text-muted font-weight-light">Guard</h6>
+                        <h4 class="font-weight-bold">13</h4>
+                        <div class="col-sm-1 offset-9">
+                            <a href="#" class="btn btn-outline-primary">+</a>
+                        </div>
                     </div>
                 </div>
-                <div class="card col mx-2">
+                <div class="card col-sm-4 col-sm-offset-1">
                     <img class="card-img-top" src="images/img_avatar1.png" alt="Card image">
                     <div class="card-body">
-                        <h4 class="card-title">John Doe</h4>
-                        <p class="card-text">Some example text.</p>
-                        <a href="#" class="btn btn-primary">See Profile</a>
-                    </div>
-                </div>
-                <div class="card col mx-2">
-                    <img class="card-img-top" src="images/img_avatar1.png" alt="Card image">
-                    <div class="card-body">
-                        <h4 class="card-title">John Doe</h4>
-                        <p class="card-text">Some example text.</p>
-                        <a href="#" class="btn btn-primary">See Profile</a>
+                        <h5 class="card-title text-uppercase">John Doe</h5>
+                        <h6 class="card-subtitle mb-2 text-muted font-weight-light">Guard</h6>
+                        <h4 class="font-weight-bold">13</h4>
+                        <div class="col-sm-1 offset-9">
+                            <a href="#" class="btn btn-outline-primary">+</a>
+                        </div>
                     </div>
                 </div>
             </div>
             <div class="row p-2">
-                <div class="card col mx-2">
+                <div class="card col-sm-4 col-sm-offset-1">
                     <img class="card-img-top" src="images/img_avatar1.png" alt="Card image">
                     <div class="card-body">
-                        <h4 class="card-title">John Doe</h4>
-                        <p class="card-text">Some example text.</p>
-                        <a href="#" class="btn btn-primary">See Profile</a>
+                        <h5 class="card-title text-uppercase">John Doe</h5>
+                        <h6 class="card-subtitle mb-2 text-muted font-weight-light">Guard</h6>
+                        <h4 class="font-weight-bold">13</h4>
+                        <div class="col-sm-1 offset-9">
+                            <a href="#" class="btn btn-outline-primary">+</a>
+                        </div>
                     </div>
                 </div>
-                <div class="card col mx-2">
+                <div class="card col-sm-4 col-sm-offset-1">
                     <img class="card-img-top" src="images/img_avatar1.png" alt="Card image">
                     <div class="card-body">
-                        <h4 class="card-title">John Doe</h4>
-                        <p class="card-text">Some example text.</p>
-                        <a href="#" class="btn btn-primary">See Profile</a>
+                        <h5 class="card-title text-uppercase">John Doe</h5>
+                        <h6 class="card-subtitle mb-2 text-muted font-weight-light">Guard</h6>
+                        <h4 class="font-weight-bold">13</h4>
+                        <div class="col-sm-1 offset-9">
+                            <a href="#" class="btn btn-outline-primary">+</a>
+                        </div>
                     </div>
                 </div>
-                <div class="card col mx-2">
+                <div class="card col-sm-4 col-sm-offset-1">
                     <img class="card-img-top" src="images/img_avatar1.png" alt="Card image">
                     <div class="card-body">
-                        <h4 class="card-title">John Doe</h4>
-                        <p class="card-text">Some example text.</p>
-                        <a href="#" class="btn btn-primary">See Profile</a>
-                    </div>
-                </div>
-                <div class="card col mx-2">
-                    <img class="card-img-top" src="images/img_avatar1.png" alt="Card image">
-                    <div class="card-body">
-                        <h4 class="card-title">John Doe</h4>
-                        <p class="card-text">Some example text.</p>
-                        <a href="#" class="btn btn-primary">See Profile</a>
+                        <h5 class="card-title text-uppercase">John Doe</h5>
+                        <h6 class="card-subtitle mb-2 text-muted font-weight-light">Guard</h6>
+                        <h4 class="font-weight-bold">13</h4>
+                        <div class="col-sm-1 offset-9">
+                            <a href="#" class="btn btn-outline-primary">+</a>
+                        </div>
                     </div>
                 </div>
             </div>
