--- a/index.html
+++ b/index.html
@@ -2,178 +2,74 @@
 <html lang="en">
 
 <head>
-    <title>Classics Franchise</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css">
-    <!-- jQuery library -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <!-- Popper JS -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.6/umd/popper.min.js"></script>
-    <!-- Latest compiled JavaScript -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js"></script>
-    <script src="js/script.js"></script>
+    <meta charset="UTF-8">
+    <!-- Import Google Icon Font -->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <!-- Compiled and minified CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-alpha.1/css/materialize.min.css">
+    <!-- Let browser know website is optimized for mobile -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Add custom css -->
     <link rel="stylesheet" href="css/main.css">
 
+    <title>Classics Franchise</title>
 </head>
 
 <body>
-
-    <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
-        <!-- Brand -->
-        <a class="navbar-brand" href="#">ClassicsLogo</a>
-
-        <!-- Toggler/collapsible Button -->
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <div class="collapse navbar-collapse" id="collapsibleNavbar">
-            <ul class="navbar-nav nav">
-                <li class="nav-item">
-                    <a class="nav-link active" data-toggle="collapse" data-target=".navbar-collapse" onclick="toggleView(event)" href="#home">Home</a>
+    <nav>
+        <div class="nav-wrapper">
+            <a href="#!" class="brand-logo">Classics</a>
+            <a href="#" data-target="mobile-demo" class="sidenav-trigger button-collapse">
+                <i class="material-icons">menu</i>
+            </a>
+            <ul class="right hide-on-med-and-down">
+                <li>
+                    <a href="#">Home</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" data-toggle="collapse" data-target=".navbar-collapse" onclick="toggleView(event)" href="#basket">Basketball</a>
+                <li>
+                    <a href="#">Basketball</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" data-toggle="collapse" data-target=".navbar-collapse" onclick="toggleView(event)" href="#football">Football</a>
+                <li>
+                    <a href="#">Football</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" data-toggle="collapse" data-target=".navbar-collapse" onclick="toggleView(event)" href="#indoor">Indoor Football</a>
+                <li>
+                    <a href="#">Indoor Football</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" data-toggle="collapse" data-target=".navbar-collapse" onclick="toggleView(event)" href="#press">Press Room</a>
+                <li>
+                    <a href="#">Mobile</a>
+                </li>
+                <li>
+                    <a href="#">Press</a>
+                </li>
+            </ul>
+            <ul class="sidenav" id="mobile-demo">
+                <li>
+                    <a href="#">Home</a>
+                </li>
+                <li>
+                    <a href="#">Basketball</a>
+                </li>
+                <li>
+                    <a href="#">Football</a>
+                </li>
+                <li>
+                    <a href="#">Indoor Football</a>
+                </li>
+                <li>
+                    <a href="#">Mobile</a>
+                </li>
+                <li>
+                    <a href="#">Press</a>
                 </li>
             </ul>
         </div>
     </nav>
 
-    <!-- Tab panes -->
-    <div class="tab-content">
-        <div class="tab-pane active container col-sm-12" id="home">
-            <div id="slideshow" class="carousel slide" data-ride="carousel">
-                <!-- Indicators -->
-                <ul class="carousel-indicators">
-                    <li data-target="#slideshow" data-slide-to="0" class="active"></li>
-                    <li data-target="#slideshow" data-slide-to="1"></li>
-                    <li data-target="#slideshow" data-slide-to="2"></li>
-                </ul>
 
-                <!-- The slideshow -->
-                <div class="carousel-inner" item-height="500">
-                    <div class="carousel-item active">
-                        <img class="d-block w-100" src="images/IMG-20171021-WA0022.jpg" alt="Basketball">
-                    </div>
-                    <div class="carousel-item">
-                        <img class="d-block w-100" src="images/IMG-20171021-WA0022.jpg" alt="Football">
-                    </div>
-                    <div class="carousel-item">
-                        <img class="d-block w-100" src="images/IMG-20171021-WA0022.jpg" alt="Indoor Football">
-                    </div>
-                </div>
 
-                <!-- Left and right controls -->
-                <a class="carousel-control-prev" href="#slideshow" data-slide="prev">
-                    <span class="carousel-control-prev-icon"></span>
-                </a>
-                <a class="carousel-control-next" href="#slideshow" data-slide="next">
-                    <span class="carousel-control-next-icon"></span>
-                </a>
-
-            </div>
-        </div>
-        <div class="tab-pane container" id="basket">
-            <h3>Roster</h3>
-            <div class="row p-2">
-                <div class="card col-sm-4 col-sm-offset-1">
-                    <img class="card-img-top" src="images/img_avatar1.png" alt="Card image">
-                    <div class="card-body">
-                        <h5 class="card-title text-uppercase">John Doe</h5>
-                        <h6 class="card-subtitle mb-2 text-muted font-weight-light">Guard</h6>
-                        <h4 class="font-weight-bold">13</h4>
-                        <div class="col-sm-1 offset-9">
-                            <a href="#" class="btn btn-outline-primary">+</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="card col-sm-4 col-sm-offset-1">
-                    <img class="card-img-top" src="images/img_avatar1.png" alt="Card image">
-                    <div class="card-body">
-                        <h5 class="card-title text-uppercase">John Doe</h5>
-                        <h6 class="card-subtitle mb-2 text-muted font-weight-light">Guard</h6>
-                        <h4 class="font-weight-bold">13</h4>
-                        <div class="col-sm-1 offset-9">
-                            <a href="#" class="btn btn-outline-primary">+</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="card col-sm-4 col-sm-offset-1">
-                    <img class="card-img-top" src="images/img_avatar1.png" alt="Card image">
-                    <div class="card-body">
-                        <h5 class="card-title text-uppercase">John Doe</h5>
-                        <h6 class="card-subtitle mb-2 text-muted font-weight-light">Guard</h6>
-                        <h4 class="font-weight-bold">13</h4>
-                        <div class="col-sm-1 offset-9">
-                            <a href="#" class="btn btn-outline-primary">+</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="row p-2">
-                <div class="card col-sm-4 col-sm-offset-1">
-                    <img class="card-img-top" src="images/img_avatar1.png" alt="Card image">
-                    <div class="card-body">
-                        <h5 class="card-title text-uppercase">John Doe</h5>
-                        <h6 class="card-subtitle mb-2 text-muted font-weight-light">Guard</h6>
-                        <h4 class="font-weight-bold">13</h4>
-                        <div class="col-sm-1 offset-9">
-                            <a href="#" class="btn btn-outline-primary">+</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="card col-sm-4 col-sm-offset-1">
-                    <img class="card-img-top" src="images/img_avatar1.png" alt="Card image">
-                    <div class="card-body">
-                        <h5 class="card-title text-uppercase">John Doe</h5>
-                        <h6 class="card-subtitle mb-2 text-muted font-weight-light">Guard</h6>
-                        <h4 class="font-weight-bold">13</h4>
-                        <div class="col-sm-1 offset-9">
-                            <a href="#" class="btn btn-outline-primary">+</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="card col-sm-4 col-sm-offset-1">
-                    <img class="card-img-top" src="images/img_avatar1.png" alt="Card image">
-                    <div class="card-body">
-                        <h5 class="card-title text-uppercase">John Doe</h5>
-                        <h6 class="card-subtitle mb-2 text-muted font-weight-light">Guard</h6>
-                        <h4 class="font-weight-bold">13</h4>
-                        <div class="col-sm-1 offset-9">
-                            <a href="#" class="btn btn-outline-primary">+</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="tab-pane container col-sm-12" id="football">
-            <h1>
-                mama
-            </h1>
-        </div>
-        <div class="tab-pane container col-sm-12" id="indoor">
-            <h1>
-                es
-            </h1>
-        </div>
-        <div class="tab-pane container col-sm-12" id="press">
-            <h1>
-                puta
-            </h1>
-        </div>
-    </div>
-
+    <!-- Compiled and minified JavaScript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-alpha.1/js/materialize.min.js"></script>
+    <script src="js/script.js"></script>
 </body>
 
 </html>
