Added a Pushpin template to add things once it completey works

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- Import Google Icon Font -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <!-- Import Roboto Font -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">    
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
     <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-alpha.2/css/materialize.min.css">
     <!--Import index.css-->
@@ -19,12 +19,104 @@
 
 <body>
 
+    <div id="blue" class="block blue">
+        <nav class="pushpin-demo-nav pinned" data-target="blue" style="top: 0px;">
+            <div class="nav-wrapper light-blue">
+                <!-- TODO: add up here the functionality to click and go to the section (Scrollspy) -->
+                <div class="container">
+                    <a href="#" class="brand-logo">Blue</a>
+                    <ul id="nav-mobile" class="right hide-on-med-and-down">
+                        <!-- TODO: maybe add here the links to the team social media, and other sections  -->
+                        <li>
+                            <a href="#!">Blue Link 1</a>
+                        </li>
+                        <li>
+                            <a href="#!">Blue Link 2</a>
+                        </li>
+                        <li>
+                            <a href="#!">Blue Link 3</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+
+        <h3>Below this should be an image</h3>
+
+        <!-- TODO: put here some team's photos -->
+        <div class="parallax-container">
+            <div class="parallax">
+                <img src="images/material.png">
+            </div>
+        </div>
+
+        <h3>Cool Parallax effect, uh?</h3>
+
+    </div>
+
+    <div id="red" class="block red lighten-1">
+        <nav class="pushpin-demo-nav pin-top" data-target="red" style="top: 0px;">
+            <div class="nav-wrapper red">
+                <div class="container">
+                    <a href="#" class="brand-logo">Red</a>
+                    <!-- TODO: Check that this nav-mobile is not fucking things up -->
+                    <!-- In case it failed, add the mobile navbar functionality -->
+                    <ul id="nav-mobile" class="right hide-on-med-and-down">
+                        <li>
+                            <a href="#!">Red Link 1</a>
+                        </li>
+                        <li>
+                            <a href="#!">Red Link 2</a>
+                        </li>
+                        <li>
+                            <a href="#!">Red Link 3</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </div>
+
+    <div id="green" class="block green lighten-1">
+        <nav class="pushpin-demo-nav pin-top" data-target="green" style="top: 0px;">
+            <div class="nav-wrapper green">
+                <div class="container">
+                    <a href="#" class="brand-logo">Green</a>
+                    <ul id="nav-mobile" class="right hide-on-med-and-down">
+                        <li>
+                            <a href="#!">Green Link 1</a>
+                        </li>
+                        <li>
+                            <a href="#!">Green Link 2</a>
+                        </li>
+                        <li>
+                            <a href="#!">Green Link 3</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </div>
+
+
+    <main>
+
+    </main>
+
+
+    <footer>
+        <!-- TODO: add a footer -->
+    </footer>
+
     <!-- Import jQuery JavaScript -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha256-k2WSCIexGzOj3Euiig+TlR8gA0EmPjuc79OEeY5L45g=" crossorigin="anonymous"></script>    
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha256-k2WSCIexGzOj3Euiig+TlR8gA0EmPjuc79OEeY5L45g="
+        crossorigin="anonymous"></script>
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-alpha.2/js/materialize.min.js"></script>
     <!-- Import index.js JavaScript -->
     <script type="text/javascript" src="js/index.js"></script>
 </body>
-
+<!-- TODO: un poqueto de firebase? -->
+<!-- TODO: google analytics -->
+<!-- En este footer aparecera un link a mi github y un </> with <3 using Materialize, view on GitHub tambien -->
 </html>
