Bug on scroll spotted

--- a/index.html
+++ b/index.html
@@ -41,16 +41,19 @@
             </div>
         </nav>
 
-        <h3>Below this should be an image</h3>
+        <div class="container">
+            <h3>Below this should be an image</h3>
 
-        <!-- TODO: put here some team's photos -->
-        <div class="parallax-container">
-            <div class="parallax">
-                <img src="images/material.png">
+            <!-- TODO: put here some team's photos -->
+            <div class="parallax-container">
+                <div class="parallax">
+                    <img src="images/material.png">
+                </div>
             </div>
-        </div>
 
-        <h3>Cool Parallax effect, uh?</h3>
+            <h3>Cool Parallax effect, uh?</h3>
+        </div>
+        <!-- FIXME: aqui abajo hace cosas extrañas al cambiar de topbar -->
 
     </div>
 
@@ -119,4 +122,5 @@
 <!-- TODO: un poqueto de firebase? -->
 <!-- TODO: google analytics -->
 <!-- En este footer aparecera un link a mi github y un </> with <3 using Materialize, view on GitHub tambien -->
+
 </html>
