End of developemnt with materialize

--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
 
 <body>
 
-    <div id="blue" class="block blue">
-        <nav class="pushpin-demo-nav pinned" data-target="blue" style="top: 0px;">
-            <div class="nav-wrapper light-blue">
+    <div id="blue" class="block section scrollspy">
+        <nav class="navbar pushpin-demo-nav pinned" data-target="blue" style="top: 0px;">
+            <div class="nav-wrapper">
                 <!-- TODO: add up here the functionality to click and go to the section (Scrollspy) -->
                 <div class="container">
                     <a href="#" class="brand-logo">Blue</a>
-                    <ul id="nav-mobile" class="right hide-on-med-and-down">
+                    <ul id="nav-desktop" class="right hide-on-med-and-down">
                         <!-- TODO: maybe add here the links to the team social media, and other sections  -->
                         <li>
                             <a href="#!">Blue Link 1</a>
@@ -40,31 +40,16 @@
                 </div>
             </div>
         </nav>
-
-        <div class="container">
-            <h3>Below this should be an image</h3>
-
-            <!-- TODO: put here some team's photos -->
-            <div class="parallax-container">
-                <div class="parallax">
-                    <img src="images/material.png">
-                </div>
-            </div>
-
-            <h3>Cool Parallax effect, uh?</h3>
-        </div>
-        <!-- FIXME: aqui abajo hace cosas extrañas al cambiar de topbar -->
-
     </div>
 
-    <div id="red" class="block red lighten-1">
+    <div id="red" class="block section scrollspy">
         <nav class="pushpin-demo-nav pin-top" data-target="red" style="top: 0px;">
-            <div class="nav-wrapper red">
+            <div class="nav-wrapper">
                 <div class="container">
                     <a href="#" class="brand-logo">Red</a>
                     <!-- TODO: Check that this nav-mobile is not fucking things up -->
                     <!-- In case it failed, add the mobile navbar functionality -->
-                    <ul id="nav-mobile" class="right hide-on-med-and-down">
+                    <ul class="right hide-on-med-and-down">
                         <li>
                             <a href="#!">Red Link 1</a>
                         </li>
@@ -80,12 +65,12 @@
         </nav>
     </div>
 
-    <div id="green" class="block green lighten-1">
+    <div id="green" class="block section scrollspy">
         <nav class="pushpin-demo-nav pin-top" data-target="green" style="top: 0px;">
-            <div class="nav-wrapper green">
+            <div class="nav-wrapper">
                 <div class="container">
                     <a href="#" class="brand-logo">Green</a>
-                    <ul id="nav-mobile" class="right hide-on-med-and-down">
+                    <ul class="right hide-on-med-and-down">
                         <li>
                             <a href="#!">Green Link 1</a>
                         </li>
