--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <title>Homepage</title>
@@ -7,105 +7,195 @@
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- Import Google Icon Font -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <!-- Import Roboto Font -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
-    <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-alpha.2/css/materialize.min.css">
-    <!--Import index.css-->
     <link rel="stylesheet" type="text/css" href="css/index.css" media="screen,projection" />
 </head>
 
 <body>
 
-    <div id="blue" class="block section scrollspy">
-        <nav class="navbar pushpin-demo-nav pinned" data-target="blue" style="top: 0px;">
-            <div class="nav-wrapper">
-                <!-- TODO: add up here the functionality to click and go to the section (Scrollspy) -->
-                <div class="container">
-                    <a href="#" class="brand-logo">Blue</a>
-                    <ul id="nav-desktop" class="right hide-on-med-and-down">
-                        <!-- TODO: maybe add here the links to the team social media, and other sections  -->
+    <nav class="white" role="navigation">
+        <div class="nav-wrapper container">
+            <a id="logo-container" href="#" class="brand-logo">Logo</a>
+            <ul class="right hide-on-med-and-down">
+                <li>
+                    <a href="#">Navbar Link</a>
+                </li>
+            </ul>
+
+            <ul id="nav-mobile" class="sidenav">
+                <li>
+                    <a href="#">Navbar Link</a>
+                </li>
+            </ul>
+            <a href="#" data-target="nav-mobile" class="sidenav-trigger">
+                <i class="material-icons">menu</i>
+            </a>
+        </div>
+    </nav>
+
+    <div id="index-banner" class="parallax-container">
+        <div class="section no-pad-bot">
+            <div class="container">
+                <br>
+                <br>
+                <h1 class="header center teal-text text-lighten-2">Lorem ipsum</h1>
+                <div class="row center">
+                    <h5 class="header col s12 light">Lorem ipsum dolor sit amet, consectetur adipiscing elit</h5>
+                </div>
+                <div class="row center">
+                    <a href="http://materializecss.com/getting-started.html" id="download-button" class="btn-large waves-effect waves-light teal lighten-1">Get Started</a>
+                </div>
+                <br>
+                <br>
+
+            </div>
+        </div>
+        <div class="parallax">
+            <img src="background1.jpg" alt="Unsplashed background img 1">
+        </div>
+    </div>
+
+
+    <div class="container">
+        <div class="section">
+
+            <!--   Icon Section   -->
+            <div class="row">
+                <div class="col s12 m4">
+                    <div class="icon-block">
+                        <h2 class="center brown-text">
+                            <i class="material-icons">flash_on</i>
+                        </h2>
+                        <h5 class="center">Lorem ipsum</h5>
+
+                        <p class="light">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam scelerisque id nunc nec volutpat.
+                            Etiam pellentesque tristique arcu, non consequat magna fermentum ac. Cras ut ultricies eros.
+                            Maecenas eros justo, ullamcorper a sapien id, viverra ultrices eros.</p>
+                    </div>
+                </div>
+
+                <div class="col s12 m4">
+                    <div class="icon-block">
+                        <h2 class="center brown-text">
+                            <i class="material-icons">group</i>
+                        </h2>
+                        <h5 class="center">Lorem ipsum</h5>
+
+                        <p class="light">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam scelerisque id nunc nec volutpat.
+                            Etiam pellentesque tristique arcu, non consequat magna fermentum ac. Cras ut ultricies eros.
+                            Maecenas eros justo, ullamcorper a sapien id, viverra ultrices eros.</p>
+                    </div>
+                </div>
+
+                <div class="col s12 m4">
+                    <div class="icon-block">
+                        <h2 class="center brown-text">
+                            <i class="material-icons">settings</i>
+                        </h2>
+                        <h5 class="center">Lorem ipsum</h5>
+
+                        <p class="light">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam scelerisque id nunc nec volutpat.
+                            Etiam pellentesque tristique arcu, non consequat magna fermentum ac. Cras ut ultricies eros.
+                            Maecenas eros justo, ullamcorper a sapien id, viverra ultrices eros.</p>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </div>
+
+
+    <div class="parallax-container valign-wrapper">
+        <div class="section no-pad-bot">
+            <div class="container">
+                <div class="row center">
+                    <h5 class="header col s12 light">Lorem ipsum dolor sit amet, consectetur adipiscing elit</h5>
+                </div>
+            </div>
+        </div>
+        <div class="parallax">
+            <img src="background2.jpg" alt="Unsplashed background img 2">
+        </div>
+    </div>
+
+    <div class="container">
+        <div class="section">
+
+            <div class="row">
+                <div class="col s12 center">
+                    <h3>
+                        <i class="mdi-content-send brown-text"></i>
+                    </h3>
+                    <h4>Contact Us</h4>
+                    <p class="left-align light">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam scelerisque id nunc nec volutpat. Etiam
+                        pellentesque tristique arcu, non consequat magna fermentum ac. Cras ut ultricies eros. Maecenas eros
+                        justo, ullamcorper a sapien id, viverra ultrices eros. Morbi sem neque, posuere et pretium eget,
+                        bibendum sollicitudin lacus. Aliquam eleifend sollicitudin diam, eu mattis nisl maximus sed. Nulla
+                        imperdiet semper molestie. Morbi massa odio, condimentum sed ipsum ac, gravida ultrices erat. Nullam
+                        eget dignissim mauris, non tristique erat. Vestibulum ante ipsum primis in faucibus orci luctus et
+                        ultrices posuere cubilia Curae;</p>
+                </div>
+            </div>
+
+        </div>
+    </div>
+
+
+    <div class="parallax-container valign-wrapper">
+        <div class="section no-pad-bot">
+            <div class="container">
+                <div class="row center">
+                    <h5 class="header col s12 light">Lorem ipsum dolor sit amet, consectetur adipiscing elit</h5>
+                </div>
+            </div>
+        </div>
+        <div class="parallax">
+            <img src="background3.jpg" alt="Unsplashed background img 3">
+        </div>
+    </div>
+
+    <footer class="page-footer teal">
+        <div class="container">
+            <div class="row">
+                <div class="col l6 s12">
+                    <h5 class="white-text">Title</h5>
+                    <p class="grey-text text-lighten-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                        dolore magna aliqua.</p>
+
+
+                </div>
+                <div class="col l3 s12">
+                    <h5 class="white-text">Title</h5>
+                    <ul>
                         <li>
-                            <a href="#!">Blue Link 1</a>
+                            <a class="white-text" href="#!">Link 1</a>
                         </li>
+                    </ul>
+                </div>
+                <div class="col l3 s12">
+                    <h5 class="white-text">Title</h5>
+                    <ul>
                         <li>
-                            <a href="#!">Blue Link 2</a>
-                        </li>
-                        <li>
-                            <a href="#!">Blue Link 3</a>
+                            <a class="white-text" href="#!">Link</a>
                         </li>
                     </ul>
                 </div>
             </div>
-        </nav>
-    </div>
-
-    <div id="red" class="block section scrollspy">
-        <nav class="pushpin-demo-nav pin-top" data-target="red" style="top: 0px;">
-            <div class="nav-wrapper">
-                <div class="container">
-                    <a href="#" class="brand-logo">Red</a>
-                    <!-- TODO: Check that this nav-mobile is not fucking things up -->
-                    <!-- In case it failed, add the mobile navbar functionality -->
-                    <ul class="right hide-on-med-and-down">
-                        <li>
-                            <a href="#!">Red Link 1</a>
-                        </li>
-                        <li>
-                            <a href="#!">Red Link 2</a>
-                        </li>
-                        <li>
-                            <a href="#!">Red Link 3</a>
-                        </li>
-                    </ul>
-                </div>
+        </div>
+        <div class="footer-copyright">
+            <div class="container">
+                Made with
+                <a class="brown-text text-lighten-3" href="http://materializecss.com">Materialize</a>
             </div>
-        </nav>
-    </div>
-
-    <div id="green" class="block section scrollspy">
-        <nav class="pushpin-demo-nav pin-top" data-target="green" style="top: 0px;">
-            <div class="nav-wrapper">
-                <div class="container">
-                    <a href="#" class="brand-logo">Green</a>
-                    <ul class="right hide-on-med-and-down">
-                        <li>
-                            <a href="#!">Green Link 1</a>
-                        </li>
-                        <li>
-                            <a href="#!">Green Link 2</a>
-                        </li>
-                        <li>
-                            <a href="#!">Green Link 3</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-    </div>
-
-
-    <main>
-
-    </main>
-
-
-    <footer>
-        <!-- TODO: add a footer -->
+        </div>
     </footer>
 
-    <!-- Import jQuery JavaScript -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha256-k2WSCIexGzOj3Euiig+TlR8gA0EmPjuc79OEeY5L45g="
         crossorigin="anonymous"></script>
-    <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-alpha.2/js/materialize.min.js"></script>
-    <!-- Import index.js JavaScript -->
     <script type="text/javascript" src="js/index.js"></script>
 </body>
-<!-- TODO: un poqueto de firebase? -->
-<!-- TODO: google analytics -->
-<!-- En este footer aparecera un link a mi github y un </> with <3 using Materialize, view on GitHub tambien -->
 
 </html>
