Added basketball page

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <a class="uppercase" href="#">Indoor football</a>
               </li>
               <li>
-                <a class="uppercase" href="#">Basketball</a>
+                <a class="uppercase" href="basketball.html">Basketball</a>
               </li>
             </ul>
             <a href="#" data-target="nav-mobile" class="sidenav-trigger">
@@ -78,7 +78,7 @@
           <a class="uppercase" href="#">Indoor football</a>
         </li>
         <li>
-          <a class="uppercase" href="#">Basketball</a>
+          <a class="uppercase" href="basketball.html">Basketball</a>
         </li>
       </ul>
     </header>
